--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,15 @@
-<nav class="navbar navbar-expand-lg nav">
-  <a class="navbar-brand" href="#">CURRICULUM</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand nav"[routerLink]="['/']" routerLinkActive="active">CURRICULUM</a>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Cursos</a>
+      <li class="nav-item ">
+        <a class="nav-link"[routerLink]="['/cursos']" routerLinkActive="active">Cursos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Projetos</a>
+        <a class="nav-link" [routerLink]="['/bootcamps']" routerLinkActive="active">Bootcamps</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Rede Sociais</a>
+        <a class="nav-link" [routerLink]="['/projetos']" routerLinkActive="active">Projetos</a>
       </li>
     </ul>
   </div>
