--- a/src/app/curriculum/home/home.component.html
+++ b/src/app/curriculum/home/home.component.html
@@ -1,3 +1,8 @@
-<h1>Curriculum </h1>
+<body>
+  <div class="head">Curriculum</div>
 
-<h2>Carlos Rodrigo</h2>
+  <h2>Carlos Rodrigo</h2>
+</body>
+<footer>
+  rede social
+</footer>
