--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,10 @@
 .nav{
   font-weight: bold;
-  font-size: 22px;
+  font-style: italic;
+  font-size: 25px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.campos{
+  font-style: italic;
+  font-size: 20px;
 }
