--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,48 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand nav"[routerLink]="['/']" routerLinkActive="active">CURRICULUM</a>
-  <div class="collapse navbar-collapse" id="navbarNav">
+  <a class="navbar-brand">
+    <img
+      src="../assets/front_End.jpg"
+      class="rounded-circle"
+      width="50px"
+      height="50px"
+    />
+  </a>
+  <a class="navbar-brand nav" [routerLink]="['/']" routerLinkActive="active"
+    >Curriculum</a
+  >
+  <div class="collapse navbar-collapse campos" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item ">
-        <a class="nav-link"[routerLink]="['/cursos']" routerLinkActive="active">Cursos</a>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="['/cursos']" routerLinkActive="active"
+          >Cursos</a
+        >
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/bootcamps']" routerLinkActive="active">Bootcamps</a>
+        <a
+          class="nav-link"
+          [routerLink]="['/bootcamps']"
+          routerLinkActive="active"
+          >Bootcamps</a
+        >
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['/projetos']" routerLinkActive="active">Projetos</a>
+        <a
+          class="nav-link"
+          [routerLink]="['/projetos']"
+          routerLinkActive="active"
+          >Projetos/Repositórios</a
+        >
+      </li>
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          [routerLink]="['/ex-prof']"
+          routerLinkActive="active"
+          >Experiência Profissional</a
+        >
       </li>
     </ul>
   </div>
 </nav>
-
-
 
 <router-outlet></router-outlet>
