--- a/src/app/cursos/cursos.lista/cursos.component.html
+++ b/src/app/cursos/cursos.lista/cursos.component.html
@@ -14,7 +14,7 @@
       <thead>
         <tr>
           <th>#</th>
-          <th>Curso</th>
+          <th>Cursos</th>
           <th class="center">Certificado</th>
           <th></th>
         </tr>
