--- a/src/app/cursos/cadastro-cursos/cadastro-cursos.component.html
+++ b/src/app/cursos/cadastro-cursos/cadastro-cursos.component.html
@@ -1,105 +1,106 @@
 <body>
-  <div *ngIf="cadastro">
-    <form autocomplete="off" novalidate [formGroup]="cadastro">
-      <div class="form-group" >
-        <label for="instituicao"
-          >Nome da Instituição ou Plataforma de Estudo</label
+  <form autocomplete="off" novalidate [formGroup]="cadastro">
+    <div class="form-group" [ngClass]="aplicaCssErro('instituicao')">
+      <label for="instituicao" class="control-label"
+        >Nome da Instituição ou Plataforma de Estudo</label
+      >
+      <input
+        type="text"
+        class="form-control"
+        id="instituicao"
+        formControlName="instituicao"
+        placeholder="Instituição ou Plataforma"
+      />
+      <app-campo-control-erro
+        [mostrarErro]="verificaValidTouched('instituicao')"
+        msgErro="Instituição ou Plataforma é
+          obrigatório"
+      >
+      </app-campo-control-erro>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-8" [ngClass]="aplicaCssErro('cursos')">
+        <label for="cursos" class="contro-label">Cursos</label>
+        <input
+          type="text"
+          class="form-control"
+          id="cursos"
+          formControlName="cursos"
+          placeholder="Curso"
+        />
+        <app-campo-control-erro
+          [mostrarErro]="verificaValidTouched('cursos')"
+          msgErro="Curso obrigátorio."
         >
+        </app-campo-control-erro>
+      </div>
+      <div class="form-group col-md-2">
+        <label for="input">Data</label>
+        <input
+          type="date"
+          class="form-control"
+          id="data"
+          formControlName="data"
+        />
+      </div>
+      <div class="form-group col-md-2">
+        <label for="input">Carga Horária</label>
         <input
           type="text"
           class="form-control"
-          id="instituicao"
-          formControlName="instituicao"
-          placeholder="Instituição ou Plataforma"
+          id="cargaH"
+          formControlName="cargaH"
+          placeholder="Quant: Horas do Curso"
         />
       </div>
-      <div class="form-row">
-        <div class="form-group col-md-8">
-          <label for="inputEmail4">Cursos</label>
-          <input
-            type="text"
-            class="form-control"
-            id="cursos"
-            formControlName="cursos"
-            placeholder="Curso"
-          />
-        </div>
-        <div class="form-group col-md-2">
-          <label for="input">Data</label>
-          <input
-            type="date"
-            class="form-control"
-            id="data"
-            formControlName="data"
-          />
-        </div>
-        <div class="form-group col-md-2">
-          <label for="input">Carga Horária</label>
-          <input
-            type="text"
-            class="form-control"
-            id="cargaH"
-            formControlName="cargaH"
-            placeholder="Quant: Horas do Curso"
-          />
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="descricao">Descrição do Curso</label>
-        <input
-          type="text"
-          class="form-control"
-          id="descricao"
-          formControlName="descricao"
-        />
-      </div>
-      <div class="form-group">
-        <label for="urlFoto">Imagem do Certificado</label>
-        <input
-          type="text"
-          class="form-control"
-          id="urlFoto"
-          formControlName="urlFoto"
-          placeholder="Colocar a Foto"
-        />
-      </div>
-      <div class="form-group">
-        <label for="linkCurso">Link do Curso</label>
-        <input
-          type="url"
-          class="form-control"
-          id="linkCurso"
-          formControlName="linkCurso"
-          placeholder="Colocar o link do curso"
-        />
-      </div>
+    </div>
+    <div class="form-group">
+      <label for="descricao">Descrição do Curso</label>
+      <input
+        type="text"
+        class="form-control"
+        id="descricao"
+        formControlName="descricao"
+      />
+    </div>
+    <div class="form-group">
+      <label for="urlFoto">Imagem do Certificado</label>
+      <input
+        type="text"
+        class="form-control"
+        id="urlFoto"
+        formControlName="urlFoto"
+        placeholder="Colocar a Foto"
+      />
+    </div>
+    <div class="form-group">
+      <label for="linkCurso">Link do Curso</label>
+      <input
+        type="url"
+        class="form-control"
+        id="linkCurso"
+        formControlName="linkCurso"
+        placeholder="Colocar o link do curso"
+      />
+    </div>
 
-      <div class="custom-control custom-switch">
-        <input
-          type="checkbox"
-          class="custom-control-input"
-          id="customSwitch1"
-        />
-        <label class="custom-control-label" for="customSwitch1"
-          >Aulas Presencial</label
-        >
-      </div>
-      <div class="custom-control custom-switch">
-        <input
-          type="checkbox"
-          class="custom-control-input"
-          id="customSwitch2"
-        />
-        <label class="custom-control-label" for="customSwitch2"
-          >Aulas On-line</label
-        >
-      </div>
-      <button type="submit" class="btn btn-success btn-lg" (click)="onSubmit()">
-        Salvar
-      </button>
-      <button type="button" class="btn btn-danger btn-lg" (click)="onCancel()">
-        Cancelar
-      </button>
-    </form>
-  </div>
+    <div class="custom-control custom-switch">
+      <input type="checkbox" class="custom-control-input" id="customSwitch1" />
+      <label class="custom-control-label" for="customSwitch1"
+        >Aulas Presencial</label
+      >
+    </div>
+    <div class="custom-control custom-switch">
+      <input type="checkbox" class="custom-control-input" id="customSwitch2" />
+      <label class="custom-control-label" for="customSwitch2"
+        >Aulas On-line</label
+      >
+    </div>
+    <button type="submit" class="btn btn-success btn-lg" (click)="onSubmit()">
+      Salvar
+    </button>
+    <button type="button" class="btn btn-danger btn-lg" (click)="onCancel()">
+      Cancelar
+    </button>
+  </form>
 </body>
