--- a/src/app/shared/campo-control-erro/campo-control-erro.component.html
+++ b/src/app/shared/campo-control-erro/campo-control-erro.component.html
@@ -1,7 +1,14 @@
 <div *ngIf="mostrarErro">
   <span class="glyphicon glyphicon-remove form-control-feedback"></span>
   <span class="sr-only">(error)</span>
-  <div *ngIf="mostrarErro" class="alert alert-danger" role="alert">
-    Instituição e Obrigatório.
+  <div class="alert alert-danger" role="alert">
+    {{ msgErro }}
   </div>
 </div>
+<!-- <div *ngIf="mostrarErro">
+  <span class="glyphicon glyphicon-remove form-control-feedback"></span>
+  <span id="nome" class="sr-only">(error)</span>
+  <div class="alert alert-danger" role="alert">
+      {{ msgErro }}
+  </div>
+</div> -->
