--- a/src/app/cursos/cursos.lista/cursos.component.html
+++ b/src/app/cursos/cursos.lista/cursos.component.html
@@ -14,7 +14,7 @@
       <thead>
         <tr>
           <th class="margin">Cursos</th>
-          <th class="center">Certificado</th>
+          <th class="center">Certificados</th>
           <th></th>
         </tr>
       </thead>
