--- a/src/app/cursos/cadastro-cursos/cadastro-cursos.component.html
+++ b/src/app/cursos/cadastro-cursos/cadastro-cursos.component.html
@@ -1,6 +1,6 @@
 <body>
   <form autocomplete="off" novalidate [formGroup]="cadastro">
-    <div class="form-group" [ngClass]="aplicaCssErro('instituicao')">
+    <div class="form-group">
       <label for="instituicao" class="control-label"
         >Nome da Instituição ou Plataforma de Estudo</label
       >
@@ -11,15 +11,9 @@
         formControlName="instituicao"
         placeholder="Instituição ou Plataforma"
       />
-      <app-campo-control-erro
-        [mostrarErro]="verificaValidTouched('instituicao')"
-        msgErro="Instituição ou Plataforma é
-          obrigatório"
-      >
-      </app-campo-control-erro>
     </div>
     <div class="form-row">
-      <div class="form-group col-md-8" [ngClass]="aplicaCssErro('cursos')">
+      <div class="form-group col-md-8">
         <label for="cursos" class="contro-label">Cursos</label>
         <input
           type="text"
@@ -28,13 +22,8 @@
           formControlName="cursos"
           placeholder="Curso"
         />
-        <app-campo-control-erro
-          [mostrarErro]="verificaValidTouched('cursos')"
-          msgErro="Curso obrigátorio."
-        >
-        </app-campo-control-erro>
       </div>
-      <div class="form-group col-md-2" [ngClass]="aplicaCssErro('data')">
+      <div class="form-group col-md-2">
         <label for="data">Data</label>
         <input
           type="date"
@@ -42,13 +31,8 @@
           id="data"
           formControlName="data"
         />
-        <app-campo-control-erro
-          [mostrarErro]="verificaValidTouched('data')"
-          msgErro="Data obrigátorio."
-        >
-        </app-campo-control-erro>
       </div>
-      <div class="form-group col-md-2" [ngClass]="aplicaCssErro('cargaH')">
+      <div class="form-group col-md-2">
         <label for="cargaH">Carga Horária</label>
         <input
           type="text"
@@ -57,14 +41,9 @@
           formControlName="cargaH"
           placeholder="Quant: Horas Curso"
         />
-        <app-campo-control-erro
-          [mostrarErro]="verificaValidTouched('cargaH')"
-          msgErro="Horas obrigatório."
-        >
-        </app-campo-control-erro>
       </div>
     </div>
-    <div class="form-group" [ngClass]="aplicaCssErro('descricao')">
+    <div class="form-group">
       <label for="descricao">Descrição do Curso</label>
       <input
         type="text"
@@ -72,13 +51,8 @@
         id="descricao"
         formControlName="descricao"
       />
-      <app-campo-control-erro
-        [mostrarErro]="verificaValidTouched('descricao')"
-        msgErro="Descrição obrigatório."
-      >
-      </app-campo-control-erro>
     </div>
-    <div class="form-group" [ngClass]="aplicaCssErro('urlFoto')">
+    <div class="form-group">
       <label for="urlFoto">Imagem do Certificado</label>
       <input
         type="text"
@@ -87,13 +61,8 @@
         formControlName="urlFoto"
         placeholder="Colocar a Foto"
       />
-      <app-campo-control-erro
-        [mostrarErro]="verificaValidTouched('urlFoto')"
-        msgErro="Colocar link da imagem ."
-      >
-      </app-campo-control-erro>
     </div>
-    <div class="form-group" [ngClass]="aplicaCssErro('linkCurso')">
+    <div class="form-group">
       <label for="linkCurso">Link do Curso</label>
       <input
         type="url"
@@ -102,11 +71,6 @@
         formControlName="linkCurso"
         placeholder="Colocar link do curso"
       />
-      <app-campo-control-erro
-        [mostrarErro]="verificaValidTouched('linkCurso')"
-        msgErro="Colocar link do curso."
-      >
-      </app-campo-control-erro>
     </div>
 
     <div class="custom-control custom-switch">
