--- a/src/app/cursos/cursos.lista/cursos.component.css
+++ b/src/app/cursos/cursos.lista/cursos.component.css
@@ -1,9 +1,19 @@
+.body{
+  background-color: brown;
+  width: 100%;
+  right: 100%;
+}
+
 img {
-  width: 10%;
-  right: 10%;
+  width: 20%;
+  right: 20%;
   display: block;
   margin: auto;
 }
+
+/* tr{
+  border: black;
+} */
 
 .center{
   text-align: center;
