--- a/src/app/cursos/cursos.lista/cursos.component.html
+++ b/src/app/cursos/cursos.lista/cursos.component.html
@@ -12,10 +12,14 @@
         >
           Novo Curso
         </button>
+        <button type="button" class="btn btn-secondary" (click)="onRefresh()">
+          Atualizar
+        </button>
       </div>
     </div>
     <div class="card-body">
-      <table class="table table-hover">
+      <table class="table table-hover"
+        *ngIf="cursos$ | async as cursos; else loading">
         <thead>
           <tr>
             <th class="margin">Cursos</th>
@@ -52,6 +56,9 @@
           </tr>
         </tbody>
       </table>
+      <ng-template #loading>
+        <span>Carregando Cursos...</span>
+      </ng-template>
     </div>
   </div>
 </body>
