--- a/src/app/cursos/cursos.lista/cursos.component.html
+++ b/src/app/cursos/cursos.lista/cursos.component.html
@@ -18,8 +18,10 @@
       </div>
     </div>
     <div class="card-body">
-      <table class="table table-hover"
-        *ngIf="cursos$ | async as cursos; else loading">
+      <table
+        class="table table-hover"
+        *ngIf="cursos$ | async as cursos; else loading"
+      >
         <thead>
           <tr>
             <th class="margin">Cursos</th>
@@ -48,7 +50,10 @@
                 >
                   Editar
                 </button>
-                <button class="btn btn-outline-danger mb-1 btn-sm">
+                <button
+                  class="btn btn-outline-danger mb-1 btn-sm"
+                  (click)="onDelete(curso)"
+                >
                   Deletar
                 </button>
               </span>
@@ -61,4 +66,15 @@
       </ng-template>
     </div>
   </div>
+  <ng-template #deleteModal>
+    <div class="modal-body text-center">
+      <p>Deseja remover este curso?</p>
+      <button type="button" class="btn btn-success" (click)="onConfirmDelete()">
+        Sim
+      </button>
+      <button type="button" class="btn btn-danger" (click)="onDeclineDelete()">
+        Não
+      </button>
+    </div>
+  </ng-template>
 </body>
