--- a/src/app/cursos/cadastro-cursos/cadastro-cursos.component.css
+++ b/src/app/cursos/cadastro-cursos/cadastro-cursos.component.css
@@ -1,7 +1,7 @@
 body {
   background-color: black;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   padding: 30px;
   font-weight: bold;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
