--- a/src/app/bootcamps/bootcamps-cadastro/bootcamps-cadastro.component.html
+++ b/src/app/bootcamps/bootcamps-cadastro/bootcamps-cadastro.component.html
@@ -14,7 +14,7 @@
     </div>
     <div class="form-row">
       <div class="form-group col-md-8">
-        <label for="cursos" class="contro-label">Cursos</label>
+        <label for="cursos" class="contro-label">Bootcamp</label>
         <input
           type="text"
           class="form-control"
@@ -44,7 +44,7 @@
       </div>
     </div>
     <div class="form-group">
-      <label for="descricao">Descrição do Curso</label>
+      <label for="descricao">Descrição do Bootcamp</label>
       <input
         type="text"
         class="form-control"
@@ -63,7 +63,7 @@
       />
     </div>
     <div class="form-group">
-      <label for="linkCurso">Link do Curso</label>
+      <label for="linkCurso">Link do Bootcamp</label>
       <input
         type="url"
         class="form-control"
