--- a/src/app/projetos/project-list/project-list.component.html
+++ b/src/app/projetos/project-list/project-list.component.html
@@ -1,1 +1,80 @@
-<p>project-list works!</p>
+<body class="body">
+  <div class="card">
+    <div class="card-header body">
+      <div class="float-left">
+        <h4>Cursos</h4>
+      </div>
+      <div class="float-right">
+        <button
+          type="button"
+          class="btn btn-primary"
+          [routerLink]="['cadastro']"
+        >
+          Novo Projeto
+        </button>
+        <button type="button" class="btn btn-secondary" (click)="onRefresh()">
+          Atualizar
+        </button>
+      </div>
+    </div>
+    <div class="card-body">
+      <table
+        class="table table-hover"
+        *ngIf="cursos$ | async as cursos; else loading"
+      >
+        <thead>
+          <tr class="center">
+            <th>Nome do Projeto</th>
+            <th>Linguagem ou Framework</th>
+            <th>Data Projetos</th>
+            <th>Commits</th>
+
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="center" *ngFor="let curso of cursos">
+            <td>{{ curso.nomeProj }}</td>
+            <td><img src="{{ curso.lfp }}" alt ="sem foto" /></td>
+            <td>{{ curso.data }}</td>
+            <td>{{ curso.commit }}</td>
+            <td>
+              <span class="float-right">
+                <button class="btn btn-outline-success mb-1 btn-sm">
+                  <a href="{{ curso.linkProj }}" target="_blank"
+                    >Certificado</a
+                  >
+                </button>
+                <button
+                  class="btn btn-outline-primary mb-1 btn-sm"
+                  (click)="onEdit(curso.id)"
+                >
+                  Editar
+                </button>
+                <button
+                  class="btn btn-outline-danger mb-1 btn-sm"
+                  (click)="onDelete(curso)"
+                >
+                  Deletar
+                </button>
+              </span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <ng-template #loading>
+        <span>Carregando projetos...</span>
+      </ng-template>
+    </div>
+  </div>
+  <ng-template #deleteModal>
+    <div class="modal-body text-center">
+      <p>Deseja remover este projeto?</p>
+      <button type="button" class="btn btn-success" (click)="onConfirmDelete()">
+        Sim
+      </button>
+      <button type="button" class="btn btn-danger" (click)="onDeclineDelete()">
+        Não
+      </button>
+    </div>
+  </ng-template>
+</body>
