--- a/src/app/projetos/project-list/project-list.component.html
+++ b/src/app/projetos/project-list/project-list.component.html
@@ -7,7 +7,7 @@
       <div class="float-right">
         <button
           type="button"
-          class="btn btn-primary"
+          class="btn btn-warning"
           [routerLink]="['cadastro']"
         >
           Novo Projeto
