--- a/src/app/profissional/trabalho/trabalho.component.css
+++ b/src/app/profissional/trabalho/trabalho.component.css
@@ -1,14 +1,27 @@
-.body{
-  background-color: brown;
-  width: 100%;
-  right: 100%;
+button{
+  border-radius: 30px;
+  font-weight: bold;
+  font-family: monospace;
+  font-weight: bold;
+}
+table{
+  background-color: #2d3436;
+  color: aqua;
 }
 
-img {
-  width: 20%;
-  right: 20%;
-  display: block;
-  margin: auto;
+th{
+  color: white;
+}
+
+
+.body{
+  background-color:#0984e3;
+  width: 100%;
+  height: 100%;
+  color: beige;
+  font-family: initial;
+  font-style: italic;
+  font-size: 23px;
 }
 
 .center{
