--- a/src/app/profissional/trabalho/trabalho.component.html
+++ b/src/app/profissional/trabalho/trabalho.component.html
@@ -1,16 +1,16 @@
-<body class="body">
+<body>
   <div class="card">
     <div class="card-header body">
       <div class="float-left">
-        <h4>Cursos</h4>
+        <h4>Experiência</h4>
       </div>
       <div class="float-right">
         <button
           type="button"
-          class="btn btn-primary"
+          class="btn btn-warning"
           [routerLink]="['cadastro']"
         >
-          Novo Curso
+          Nova Experiência
         </button>
         <button type="button" class="btn btn-secondary" (click)="onRefresh()">
           Atualizar
@@ -48,7 +48,7 @@
               <span class="float-right">
                 <button class="btn btn-outline-success mb-1 btn-sm">
                   <a href="{{ curso.linkEmpresa }}" target="_blank"
-                    >Certificado</a
+                    >Empresa</a
                   >
                 </button>
                 <button
