--- a/src/app/profissional/trabalho/trabalho.component.html
+++ b/src/app/profissional/trabalho/trabalho.component.html
@@ -2,7 +2,7 @@
   <div class="card">
     <div class="card-header body">
       <div class="float-left">
-        <h4>Experiência</h4>
+        <h1>Experiência</h1>
       </div>
       <div class="float-right">
         <button
@@ -69,7 +69,7 @@
         </tbody>
       </table>
       <ng-template #loading>
-        <span>Carregando Cursos...</span>
+        <span>Carregando experiência...</span>
       </ng-template>
     </div>
   </div>
