--- a/src/app/projetos/project-list/project-list.component.html
+++ b/src/app/projetos/project-list/project-list.component.html
@@ -2,7 +2,7 @@
   <div class="card">
     <div class="card-header body">
       <div class="float-left">
-        <h4>Cursos</h4>
+        <h1>Projetos</h1>
       </div>
       <div class="float-right">
         <button
@@ -48,13 +48,13 @@
                 </svg>
                 </button>
                 <button
-                  class="btn btn-outline-primary mb-1 "
+                  class="btn btn-primary mb-1 "
                   (click)="onEdit(curso.id)"
                 >
                   Editar
                 </button>
                 <button
-                  class="btn btn-outline-danger mb-1"
+                  class="btn btn-danger mb-1"
                   (click)="onDelete(curso)"
                 >
                   Deletar
