--- a/src/app/projetos/project-list/project-list.component.css
+++ b/src/app/projetos/project-list/project-list.component.css
@@ -1,7 +1,20 @@
-.body{
-  background-color: brown;
-  width: 100%;
-  right: 100%;
+button{
+  border-radius: 30px;
+  font-weight: bold;
+  font-family: monospace;
+  font-weight: bold;
+  font-size: 15px;
+}
+table{
+  background-color:#636e72;
+  color:black;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+th{
+  color: white;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 16px;
 }
 
 img {
@@ -14,8 +27,13 @@ img {
 .center{
   text-align: center;
 }
-button{
-  font-weight: bold;
-  border-radius: 20px;
+.body{
+  background-color:#00b894;
+  width: 100%;
+  right: 100%;
+  font-family: initial;
+  font-style: italic;
+  color:black;
 }
+
 
