--- a/src/app/bootcamps/cursos-bootcamps-list/cursos-bootcamps.component.html
+++ b/src/app/bootcamps/cursos-bootcamps-list/cursos-bootcamps.component.html
@@ -34,7 +34,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr class="center" *ngFor="let curso of cursos">
+          <tr  *ngFor="let curso of cursos">
             <td>{{ curso.instituicao }}</td>
             <td>{{ curso.cursos }}</td>
             <td>{{ curso.descricao }}</td>
