--- a/src/app/cursos/cursos.lista/cursos.component.css
+++ b/src/app/cursos/cursos.lista/cursos.component.css
@@ -1,8 +1,8 @@
-.body{
+/* .body{
   background-color: brown;
   width: 100%;
   right: 100%;
-}
+} */
 
 img {
   width: 20%;
@@ -11,8 +11,11 @@ img {
   margin: auto;
 }
 
-.center{
-
+table {
+   
 }
+/* .center{
+
+} */
 
 
