--- a/src/app/cursos/cursos.lista/cursos.component.html
+++ b/src/app/cursos/cursos.lista/cursos.component.html
@@ -1,4 +1,4 @@
-<body class="body">
+
   <div class="card">
     <div class="card-header body">
       <div class="float-left">
@@ -18,11 +18,14 @@
       </div>
     </div>
     <div class="card-body">
-      <table
-        class="table table-hover"
+      <table class="mat-elevation-z8"
         *ngIf="cursos$ | async as cursos; else loading"
       >
-        <thead>
+      <ng-container matColumnDef="position" *ngFor="let curso of cursos">
+        <th mat-header-cell *matHeaderCellDef>Instituição de ensino</th>
+        <td mat-cell *matCellDef="let element">{{ curso.instituicao }}</td>
+      </ng-container>
+        <!-- <thead>
           <tr class="center">
             <ion-col col-3>Instituição de ensino</ion-col>
             <ion-col col->Cursos</ion-col>
@@ -34,7 +37,7 @@
         </thead>
         <tbody>
           <tr class="center" *ngFor="let curso of cursos">
-            <ion-col col-3>{{ curso.instituicao }}</ion-col>
+            <ion-col>{{ curso.instituicao }}</ion-col>
             <ion-col>{{ curso.cursos }}</ion-col>
             <ion-col>{{ curso.descricao }}</ion-col>
             <ion-col>{{ curso.data }}</ion-col>
@@ -61,13 +64,13 @@
                 </button>
               </span>
             </td>
-          </tr>
-        </tbody>
+          </tr> 
+        </tbody>-->
       </table>
       <ng-template #loading>
         <span>Carregando Cursos...</span>
       </ng-template>
-    </div>
+    <!-- </div>
   </div>
   <ng-template #deleteModal>
     <div class="modal-body text-center">
@@ -79,5 +82,5 @@
         Não
       </button>
     </div>
-  </ng-template>
-</body>
+  </ng-template> -->
+
