--- a/src/app/bootcamps/cursos-bootcamps-list/cursos-bootcamps.component.html
+++ b/src/app/bootcamps/cursos-bootcamps-list/cursos-bootcamps.component.html
@@ -26,7 +26,7 @@
           <tr class="center">
             <th>Instituição de ensino</th>
             <th>Bootcamps</th>
-            <th>Descrição</th>
+            <th>André</th>
             <th>Data bootcamps </th>
             <th>Quantidate Horas</th>
             <th>Certificados</th>  
