--- a/src/app/cursos/cursos.lista/cursos.component.css
+++ b/src/app/cursos/cursos.lista/cursos.component.css
@@ -1,21 +1,37 @@
-/* .body{
-  background-color: brown;
-  width: 100%;
-  right: 100%;
-} */
-
 img {
   width: 20%;
   right: 20%;
   display: block;
   margin: auto;
 }
-
-table {
-   
+th {
+  text-align: center;
+  white-space: nowrap;
+  margin-top: 10px;
+  font-size: 18px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-/* .center{
 
-} */
+td {
+  text-align: center;
+  white-space: initial;
+  font-style: italic;
+  font-size: 15px;
+}
 
+h2{
+  font-weight: bold;
+}
 
+.float-right {
+  white-space: nowrap;
+}
+
+.edit {
+  border-radius: 10px;
+}
+
+.margin {
+  margin-top: 20px;
+}
