--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,14 @@
-<h5>Login</h5>
+<div class="borda">
+  <p class="login">Login</p>
+<form class="example-form">
+  <mat-form-field class="example-full-width">
+    <mat-label>Usuário</mat-label>
+    <input matInput placeholder="Digite seu Email ou Usuário">
+  </mat-form-field>
 
-<div class="row">
-  <div class="input-fieldcol 12">
-    <input id="usuario" type='text' class="validate">
-    <label class="active" for="usuario">Usuário</label>
-  </div>
+  <mat-form-field class="example-full-width">
+    <mat-label>Senha</mat-label>
+    <input matInput placeholder="Digite sua Senha">
+  </mat-form-field>
+</form>
 </div>
