--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,5 +10,7 @@
     <mat-label>Senha</mat-label>
     <input matInput placeholder="Digite sua Senha">
   </mat-form-field>
+
+ <button (click)="abrir()" >Teste</button>
 </form>
 </div>
