--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,6 +11,6 @@
     <input matInput placeholder="Digite sua Senha">
   </mat-form-field>
 
- <button (click)="abrir()" >Teste</button>
+ <button (click)="abrir()" ></button>
 </form>
 </div>
